worked in comments

--- a/thesis/content/conclusion.tex
+++ b/thesis/content/conclusion.tex
@@ -14,9 +14,9 @@ Throughout the development process five major issues could be discovered:
 
 It has to be said that the results gathered in section \ref{sec:results} may vary depending on the coding style, programming language, concrete use case and size of the project, furthermore the term \emph{code quality} does not have a unique definition. There are many different standpoints on what attributes a well written code should have, often depending on company coding policies. One factor that is not mentioned by intention in this thesis is the readability of the code as this is a very subjective matter and is therefore not considered. 
 
-In terms of the definition used in this thesis, which mainly focuses on properties defined by guidelines of the object oriented programming the results support the hypothesis saying that the use of design patterns improves code quality in later stages of a project cycle. This is backed up by the lower number of files needing modification in the process of extending functionality and the lower number of lines added between phases 1 and 2. 
+In terms of the definition used in this thesis, which mainly focuses on properties defined by guidelines of the object oriented programming the results support the hypothesis saying that the use of design patterns improves code quality in later stages of a project cycle. This is backed up by the lower number of files needing modification in the process of extending functionality and the lower number of lines added between phases 1 and 2 as well as the increase in code complexity between those two phases.
 
-At the same time in the first stage the initial programming effort for a clean implementation using well-known patterns is significantly higher, and even later on in the best practice implementation utilizes both a larger number of files and more lines of code, which on the other hand may increase the efforts for software maintenance.
+At the same time in the first stage the initial programming effort for a clean implementation using well-known patterns is considerably higher, and even later on in the best practice implementation utilizes both a larger number of files and more lines of code, which may increase the efforts for software maintenance and testing.
 
 In conclusion it can be said that the use of design patterns can help to increase code quality if the requirements of a software project are likely to change, which is the common case especially for bigger applications. 
 
