--- a/thesis/content/discussion.tex
+++ b/thesis/content/discussion.tex
@@ -17,3 +17,7 @@ Additionally to the lower number of files and the comparable number of lines in 
 The biggest effect and difference when using design patterns and interfaces can be observed exactly in conforming of the Single-Responsibility-Principle and hence in the readability of the code. While each data class of the ad-hoc version does not only have the responsibility to encapsulate the data, it is responsible for saving the data to two different kinds of persistent storage. This results in a quite long file that mixes technologies and needs to be revisited any time a new persistent storage is added, existing storage technologies are changed or the data classes change. 
 
 In the case of view frameworks due to missing use of interfaces asides from implementing the view using a new framework each and every class that depends on any kind of interface needs to be adopted. This is visible in table \ref{table:touched-files}, where is stated that the implementation of new technologies influences lower numbers of dependent files which is a very desired behaviour. 
+
+In addition to the points mentioned above the metric of the code complexity which can be seen in section \ref{sec:complexity} clearly indicates a difference in the maintainability of the application. The cyclometric complexity states the independent paths in a program, a higher number indicates that the code is on the one hand difficult to understand and on the other hand is more likely to contain errors\footnote{\href{http://www.chambers.com.au/glossary/mc\_cabe\_cyclomatic\_complexity.php}{http://www.chambers.com.au/glossary/mc\_cabe\_cyclomatic\_complexity.php}}. Furthermore as some testing strategies are targeting to cover all paths of a program a higher code complexity may also lead to higher testing effort.
+Similar to the results of the straight-forward line count the complexity development seen in table \ref{table:total-complexity} shows that while the initial complexity of the ad-hoc program version is slightly lower especially in the transition from phase 1 to phase 2 the complexity raises over-proportionally compared to the best-practice implementation. 
+Also the code complexity per file as can be seen in table \ref{table:file-complexity} shows that due to the reduced number of files each file has a quite high complexity. This indicates that the classes are more difficult to understand and test which impacts maintainability negatively. 
