--- a/thesis/content/references.bib
+++ b/thesis/content/references.bib
@@ -120,3 +120,9 @@ year = "2004"
 	date = {2011-06-08},
 	doi={10.1016/j.infsof.2011.10.006}
 }
+
+@article{cyclo,
+	author={Thomas J McCabe},
+	title={A Complexity Measure},
+	date={1976-12}
+}
