--- a/thesis/content/references.bib
+++ b/thesis/content/references.bib
@@ -19,7 +19,7 @@
 	publisher	= "Springer-Verlag",
 }
 	
-@inproceedings{Composing06,
+@book{Composing06,
 	author		= "Alessandro Garcia, Cláudio Sant'Anna, and others",
 	booktitle	= "AOSD '06 Proceedings of the 5th international conference on Aspect-oriented software development",
 	title 		= "Composing design patterns: a scalability study of aspect-oriented programming",
@@ -34,7 +34,7 @@
 	publisher = "Birkhäuser Boston",
 	doi = {10.1007/978-1-4612-4138-6}
 	}
-@article{johnson91,
+@book{johnson91,
 author = "Ralph E. Johnson, Brian Foote",
 title = "Designing Reusable Classes",
 year = "1991"
@@ -45,11 +45,11 @@ year = "1991"
 	title = {Patterns of Enterprise Application Architecture},
 	date = {November 2002},
 	publisher = {Addison Wesley},
-	OPTisbn = {0-321-12742-0},
+	isbn = {0-321-12742-0},
 }
 
 
-@article{truyen04,
+@book{truyen04,
 author = "Eddy Truyen, Wouter Joosen, Bo Nørregaard Jørgensen and others",
 title = "A Generalization and Solution to the Common Ancestor Dilemma Problem in Delegation-Based Object Systems",
 year = "2004"
@@ -61,13 +61,13 @@ year = "2004"
 	date = "2003",
 	isbn = "0135974445",
 }
-@article{srp,
+@book{srp,
 	author = "D.L. Parnas",
 	title = "On the Criteria To Be Used in Decomposing Systems into Module",
 	date = "1972"
 }
 
-@article{ocp,
+@book{ocp,
 	author = "Bertrand Meyer",
 	title = "Object Oriented Software Construction",
 	date = "1988"
@@ -79,22 +79,22 @@ year = "2004"
 	publisher = {Pearson Education Inc.},
 	isbn = {978-0-13-235088-4},
 }
-@article{data-types,
+@book{data-types,
 	author={Luca Cardelli, Peter Wegner},
 	title = {On Understanding Types, Data Abstraction, and Polymorphism},
 	date = {1985-12}
 }
-@article{coupling,
+@book{coupling,
 	author={Johann Eder, Gerti Kappel, Michael Schrefl},
 	title={Coupling and Cohesion in Object-Oriented Systems},
 	date = {1994}
 }
-@article{mvc,
+@book{mvc,
 	author={Glenn E. Krasner, Stephen T. Pope},
 	title = {A Description of the Model-View-Controller User Interface Paradigm in the Smalltalk-80 System},
 	date = {1988}
 }
-@article{mvp,
+@book{mvp,
 	author={Valentin Corneliu Pau ,Marius Iulian Mihailescu, Octavian Stanescu},
 	title = {Model View Presenter Design Pattern},
 	date={2010}
@@ -107,21 +107,21 @@ year = "2004"
 	publisher={Auerbach Publications}
 }
 
-@article{quality,
+@book{quality,
 	author={Foutse Khomh, Yann-Gael Gueheneuce},
 	title = {Do Design Patterns Impact Software Quality Positively?},
 	date = {2008-04-18},
 	doi={10.1109/CSMR.2008.4493325}
 }
 
-@article{quality2,
-	author={Apostolos Ampatzoglou, Georgia Frantzeskou, Ioannis Stamelos},
-	title = {A methodology to assess the impact of design patterns on software quality},
-	date = {2011-06-08},
-	doi={10.1016/j.infsof.2011.10.006}
+@book{quality2,
+	author="Apostolos Ampatzoglou, Georgia Frantzeskou, Ioannis Stamelos",
+	title = "A methodology to assess the impact of design patterns on software quality",
+	date = "2011-06-08",
+	doi="10.1016/j.infsof.2011.10.006"
 }
 
-@article{cyclo,
+@book{cyclo,
 	author={Thomas J McCabe},
 	title={A Complexity Measure},
 	date={1976-12}
